# atlas_generator

./: README.md
.github/workflows/: test_linux_clang.yml  test_linux_gcc.yml  test_windows_mingw.yml
src/: CMakeLists.txt  main.cpp
src/bin_packing/: CMakeLists.txt  bin_packing.cpp  bin_packing.hpp
src/cmake/: extern.cmake
src/test/: CMakeLists.txt  bin_packing_tests.cpp
